fixed issue with banner sitting over banner on small screen

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ a:hover {
   text-align: center;
   background-color: rgba(255, 255, 255, 0.7);
   position: relative;
-  bottom: 160px;
+  bottom: 100px;
   padding-bottom: 2px;
 }
 
@@ -103,6 +103,7 @@ a:hover {
 .imgbox {
   border-radius: 30px 0 30px 30px;
   border: 3px solid black;
+  background-color: black;
 }
 
 /*-------style----------------------------*/
@@ -263,13 +264,19 @@ input:focus {
 }
 
 
-/*----------media-----------------------------*/
+
+
+
+
+
+/*----------media--------------------------------------------------------------*/
 
 @media only screen and (min-width: 15em){
 
   body {
     padding: 0 10px;
   }
+
 }
 
 
@@ -290,6 +297,12 @@ input:focus {
   -ms-align-items: flex-end;
   align-items: flex-end;
 }
+
+
+  .bar {
+    bottom: 160px;
+  }
+
 }
 
 
